--- a/host/lib-use-example/index.html
+++ b/host/lib-use-example/index.html
@@ -15,6 +15,6 @@
 </body>
 
 
-<script src="http://127.0.0.1:8080/main.min.js"></script>
+<script src="http://127.0.0.1:3001/main.js"></script>
 
 </html>
